# Super_VelocityCurve

./: .gitignore  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Source/Engine/: HitEventFifo.h  MidiVelocity.h  VelocityCurve.cpp  VelocityCurve.h  VelocityEngine.cpp  VelocityEngine.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Profiles/: ControllerProfile.cpp  ControllerProfile.h  GMDrumMap.h  ProfileStore.cpp  ProfileStore.h
Source/UI/: CurveEditorComponent.cpp  CurveEditorComponent.h  PadGridComponent.cpp  PadGridComponent.h  PadInspectorComponent.cpp  PadInspectorComponent.h  Theme.h
Tests/: EngineTests.cpp
scripts/: lipo-macos-universal.sh
